k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: neo1-ingress-nginx
  labels:
    app.kubernetes.io/name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: react-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: react-app
    spec:
      containers:
      - name: react-app
        image: docker.io/devojeda/app-react-next:0.1
        resources:
          requests:
            cpu: "247m"
            memory: "215Mi"
          limits:
            cpu: "247m"
            memory: "215Mi"
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: IfNotPresent
