k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-react-next-service
  labels:
    app: app-react-next
spec:
  selector:
    app: app-react-next
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
